[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/UI Sprites/UilityUI/X-ButtonNormal.png" type="Texture" id=1]
[ext_resource path="res://UI/UI Sprites/UilityUI/UtilityBG.png" type="Texture" id=2]
[ext_resource path="res://UI/UI Sprites/UilityUI/X-ButtonHover.PNG" type="Texture" id=3]
[ext_resource path="res://UI/UI Sprites/UilityUI/FloorCore B-Room/Free-Roam-Button_Hover.png" type="Texture" id=4]
[ext_resource path="res://UI/UI Sprites/UilityUI/FloorCore B-Room/Free-Roam-Button_Normal.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Dynamic Fonts/JetBrains Mono MEDIUM.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/Dynamic Fonts/JetBrains Mono BOLD.tres" type="DynamicFont" id=7]
[ext_resource path="res://UI/Watchson/UtilityUI/FloorCore B-Room Utility.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/JetBrains Mono/JetBrainsMono-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = SubResource( 3 )

[node name="FloorCore B-Room Utility" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 368 )
texture = ExtResource( 2 )

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1083.0
margin_top = 53.0
margin_right = 1133.0
margin_bottom = 103.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="FreeRoamButton" type="TextureButton" parent="."]
margin_left = 532.0
margin_top = 244.0
margin_right = 682.0
margin_bottom = 394.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="FreeRoamLabel" type="RichTextLabel" parent="FreeRoamButton"]
margin_left = -24.0
margin_top = 150.0
margin_right = 171.0
margin_bottom = 214.0
grow_horizontal = 2
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Free Roam[/center]"
text = "Free Roam"

[node name="ToggleSection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="FloorCore B-Room Icon" type="Sprite" parent="ToggleSection"]
position = Vector2( 642, 336 )
texture = ExtResource( 4 )

[node name="infoLabel" type="RichTextLabel" parent="ToggleSection"]
margin_left = 286.0
margin_top = 421.0
margin_right = 1006.0
margin_bottom = 485.0
grow_horizontal = 2
custom_fonts/bold_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]The FloorCore B-Room is in free-roam.[/center]"
text = "The FloorCore B-Room is in free-roam."
